test/modules/errors/useMissingModule3.good
useMissingModule3.chpl:1: error: Cannot find symbol 'Peas' in module 'Goober'
